--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
             <a href="index.html">Home</a>
+            <a href="242index.html">242 Home</a>
             <a href="about.html">AboutMe</a>
             <a href="interests.html">MyInterests</a>
             <a href="usc.html">USC</a>
@@ -50,6 +51,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
