--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -36,6 +36,7 @@
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
             <a href="index.html">Home</a>
+            <a href="242index.html">242 Home</a>
             <a href="about.html">AboutMe</a>
             <a href="interests.html">MyInterests</a>
             <a href="usc.html">USC</a>
