--- a/index.html
+++ b/index.html
@@ -101,34 +101,7 @@ line-height: calc(1em + 2px);
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <HR>
-<div align="center">
-<div class="row">
-<div class="column1" style="background-color: pink;">
-<ul>
-    <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
-    <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
-    <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
-    <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
-</ul>
-</div>
-<div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
-<div class="column1" style="background-color: lightblue;">
-  <div class="tablecontainer">
-    <span style="align: left;"><H3>SiteMap</H3></span><HR>
-    <table>
-    <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
-    <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
-    <tr><td>Interests</td><td><a href="interests.html">Interests</a></td><td>01/15/2026</td></tr>
-    <tr><td>USCLife</td><td><a href="usc.html">USC Life</a></td><td>01/15/2026</td></tr>
-    <tr><td>Portfolio</td><td><a href="portfolio.html">ClassWork</a></td><td>01/15/2026</td></tr>
-    <tr><td>Vitae</td><td><a href="vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
-    </table>
-    </div>
-</div>
-</div>
-</div>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWelcome to John S. Stritzinger's University of South Carolina Engineering Site. This site includes a collection of local works, and others which I have published previously. I am a Graduate Student in Computer Science and a Teaching Assistant. I am also the owner of two small companies which are various stages of formation.</p>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe demands of small businesses on the Internet are substantial and I operate more than 5 twitter sites including a personal one, three full public websites with marketing collateral, a facebook site, and more than 10 published application frameworks for mobile tools, and console apps. I host services around the world in more than 10 states, and 5 countries using my own Hybrid Infrastructure along with Hybrid sites at Google, AWS, and Microsoft Azure.</p>
+<div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div>
 <HR>
 <BR><BR><BR>
 </div>
