--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@ line-height: calc(1em + 2px);
 <div align="center">John S. Stritzinger</div>
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
-<HR>
-<div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div>
-<HR>
+<div align="center"><span align=center><img src="image1.png" width="400px" height="400px"></span></div>
+<ul>
+  <li><a href="242index.html">Assignment One Page</a></li>
+</ul>
 <BR><BR><BR>
 </div>
 </body>
