--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ line-height: calc(1em + 2px);
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center"><span align=center><img src="image1.png" width="400px" height="400px"></span></div>
 <ul>
+  <H2>Class Overview</H2>
+  <p>This is a Web Development class focused on HTML, CSS and React Programming with both UI, and BackOffice Tools.</p>
+  <H2>Assignments</H2>
   <li><a href="242index.html">Assignment One Page</a></li>
 </ul>
 <BR><BR><BR>
