--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ height: 25px;
 }
 ul
 {
-background-color: pink;
-color: white;
+color: black;
 display: block;
 list-style-type: disc; /* Default bullet */
 margin-block-start: 1em;
@@ -54,7 +53,6 @@ li
   align: left;
   display: list-item;
   text-align: -webkit-match-parent;
-  margin-left: -20px;
 }
 .column1
 {
