--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ line-height: calc(1em + 2px);
 <div align="center"><span align=center><img src="image1.png" width="400px" height="400px"></span></div>
 <ul>
   <H2>Class Overview</H2>
-  <p>This is a Web Development class focused on HTML, CSS and React Programming with both UI, and BackOffice Tools.</p>
+  <p>This is a Web Development class focused on HTML, CSS, Javascript and React Programming Class at the University of South Carolina with both UI, and BackOffice Tools covered in detail. This course is the 2nd in the sequence following Computer Science 102(CSS/Javascript).</p>
   <H2>Assignments</H2>
   <li><a href="242index.html">Assignment One Page</a></li>
 </ul>
