--- a/242index.html
+++ b/242index.html
@@ -58,7 +58,7 @@ li
 }
 .column1
 {
-width: 33%;
+width: 25%;
 height: 350px;
 text-align: center;
 margin: 0 auto;  
@@ -70,7 +70,7 @@ text-align: left;
 p
 {
 margin-bottom: 5px;
-line-height: calc(1em + 2px);  
+line-height: calc(1em + 6px);  
 }
 </style>
 </head>
@@ -111,7 +111,7 @@ line-height: calc(1em + 2px);
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
-<div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
+<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"><img src="image1.png" width="290px" height="290px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
