--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -56,6 +56,13 @@ li
   text-align: -webkit-match-parent;
   margin-left: -20px;
 }
+.column
+{
+width: 50%;
+height: 350px;
+text-align: center;
+margin: 0 auto;  
+}    
 .column1
 {
 width: 25%;
