--- a/242index.html
+++ b/242index.html
@@ -61,7 +61,8 @@ li
 width: 50%;
 height: 350px;
 text-align: center;
-margin: 0 auto;  
+margin: 0 auto;
+border: 2px solid black;
 }  
 .column1
 {
