--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -61,7 +61,8 @@ li
 width: 50%;
 height: 350px;
 text-align: center;
-margin: 0 auto;  
+margin: 0 auto;
+border: 2px black solid;
 }    
 .column1
 {
@@ -118,7 +119,7 @@ line-height: calc(1em + 6px);
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
-<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"><img src="image1.png" width="290px" height="290px"></span></div></div>
+<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/image1.png" width="290px" height="290px"><img src="./images/john2.jpg" width="290px" height="290px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
