--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -104,7 +104,7 @@ line-height: calc(1em + 6px);
     </div>
 </div>
 <div class="container">    
-<div align="center"><h1>242 SiteHome</h1></div>
+<div align="center"><h1>Assignment1 - Spring 26</h1></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
