--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -88,13 +88,13 @@ line-height: calc(1em + 6px);
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="242index.html">242 Home</a>
-            <a href="about.html">AboutMe</a>
-            <a href="interests.html">MyInterests</a>
-            <a href="usc.html">USC</a>
-            <a href="portfoliopage.html">Portfolio</a>
-            <a href="vitae.html">Vitae</a>
+            <a href="../index.html">Home</a>
+            <a href="../242index.html">242 Home</a>
+            <a href="../about.html">AboutMe</a>
+            <a href="../interests.html">MyInterests</a>
+            <a href="../usc.html">USC</a>
+            <a href="../portfoliopage.html">Portfolio</a>
+            <a href="../vitae.html">Vitae</a>
         </div>
     </div>
 
@@ -114,7 +114,7 @@ line-height: calc(1em + 6px);
 <div class="column1" style="background-color: pink;">
 <ul>
     <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
-    <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
+    <li><a href="index.html">CSCE242 - Assignment One</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
