--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ line-height: calc(1em + 2px);
 <div align="center"><span align=center><img src="image1.png" width="370px" height="370px"></span></div>
 <ul>
   <H2>Class Overview</H2>
-  <p>This is a Web Development class focused on HTML, CSS, Javascript and React Programming Class at the University of South Carolina with both UI, and BackOffice Tools covered in detail. This course is the 2nd in the sequence following Computer Science 102(CSS/Javascript).</p>
+  <p>This is a Web Development class focused on HTML, CSS, Javascript and React Programming Class at the University of South Carolina with both UI, and BackOffice Tools covered in detail. This course is the second in the sequence following Computer Science 102(CSS/Javascript).</p>
   <H2>Assignments</H2>
-  <li><a href="242index.html">Assignment One Page</a></li>
+  <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One Page</a></li>
 </ul>
 <BR><BR><BR>
 </div>
