--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -125,11 +125,11 @@ line-height: calc(1em + 6px);
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
-    <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
-    <tr><td>Interests</td><td><a href="interests.html">Interests</a></td><td>01/15/2026</td></tr>
-    <tr><td>USCLife</td><td><a href="usc.html">USC Life</a></td><td>01/15/2026</td></tr>
-    <tr><td>Portfolio</td><td><a href="portfolio.html">ClassWork</a></td><td>01/15/2026</td></tr>
-    <tr><td>Vitae</td><td><a href="vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
+    <tr><td>About</td><td><a href="https://jssg33.github.io/usc242/about.html">About</a></td><td>01/15/2026</td></tr>
+    <tr><td>Interests</td><td><a href="https://jssg33.github.io/usc242/interests.html">Interests</a></td><td>01/15/2026</td></tr>
+    <tr><td>USCLife</td><td><a href="https://jssg33.github.io/usc242/usc.html">USC Life</a></td><td>01/15/2026</td></tr>
+    <tr><td>Portfolio</td><td><a href="https://jssg33.github.io/usc242/portfolio.html">ClassWork</a></td><td>01/15/2026</td></tr>
+    <tr><td>Vitae</td><td><a href="https://jssg33.github.io/usc242/vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
     </table>
     </div>
 </div>
