--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -88,13 +88,13 @@ line-height: calc(1em + 6px);
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="../index.html">Home</a>
-            <a href="../242index.html">242 Home</a>
-            <a href="../about.html">AboutMe</a>
-            <a href="../interests.html">MyInterests</a>
-            <a href="../usc.html">USC</a>
-            <a href="../portfoliopage.html">Portfolio</a>
-            <a href="../vitae.html">Vitae</a>
+            <a href="../../index.html">Home</a>
+            <a href="../../242index.html">242 Home</a>
+            <a href="../../about.html">AboutMe</a>
+            <a href="../../interests.html">MyInterests</a>
+            <a href="../../usc.html">USC</a>
+            <a href="../../portfoliopage.html">Portfolio</a>
+            <a href="../../vitae.html">Vitae</a>
         </div>
     </div>
 
