--- a/242index.html
+++ b/242index.html
@@ -128,7 +128,7 @@ line-height: calc(1em + 6px);
     <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
     <tr><td>Interests</td><td><a href="interests.html">Interests</a></td><td>01/15/2026</td></tr>
     <tr><td>USCLife</td><td><a href="usc.html">USC Life</a></td><td>01/15/2026</td></tr>
-    <tr><td>Portfolio</td><td><a href="portfolio.html">ClassWork</a></td><td>01/15/2026</td></tr>
+    <tr><td>Portfolio</td><td><a href="portfoliopage.html">ClassWork</a></td><td>01/15/2026</td></tr>
     <tr><td>Vitae</td><td><a href="vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
     </table>
     </div>
