--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -10,7 +10,7 @@
 /* Create two equal columns that floats next to each other */
 .column1 {
   float: left;
-  width: 50%;
+  width: 33%;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
 }
@@ -68,14 +68,14 @@
         <li><a href="https://facebook.com/greenvilleassociates">@Greenville at Facebook</li>
     </ul>
   </div>
-  <div class="column2" style="background-color:lightgreen; border: 2pt solid black">
+  <div class="column1" style="background-color:lightgreen; border: 2pt solid black">
     <h2>App Sites</h2>
         <ul>
         <li><a href="./assignments/01-basic-html/index.html">Assignment1</a></li>
     </ul>
   </div>
+<div class="column1" style="width: 100%; height: 280px; background-color: pink; border: 2px black solid;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
 </div>
-<div style="width: 100%; height: 280px; background-color: pink; border: 2px black solid;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
 </div>
     </body>
     <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
