--- a/242index.html
+++ b/242index.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage</title>
+<!--John S. Stritzinger
+    CSCE242
+    Spring 2026
+    January 15th, 2026
+-->
 <style>
 .tablecontainer
 {
