--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -74,7 +74,7 @@
         <li><a href="./assignments/01-basic-html/index.html">Assignment1</a></li>
     </ul>
   </div>
-<div class="column1" style="width: 100%; height: 280px; background-color: pink; border: 2px black solid;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
+<div class="column1" style="background-color: pink; border: 2px black solid;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
 </div>
 </div>
     </body>
