--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -56,6 +56,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
+<span align="center"><img src="john2.png" width="300px" height="300px"/></span>
  
 
 <div class="row">
