--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@ line-height: calc(1em + 2px);
   <H2>Class Overview</H2>
   <p>This is a Web Development class focused on HTML, CSS, Javascript and React Programming Class at the University of South Carolina with both UI, and BackOffice Tools covered in detail. This course is the second in the sequence following Computer Science 102(CSS/Javascript).</p>
   <H2>Assignments</H2>
-  <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One Page</a></li>
+  <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One(1/18) - 242 Home Page with Site Css</a></li>
+  <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two(1/21) - USC Basketball w Basic CSS</li>
 </ul>
 <BR><BR><BR>
 </div>
