Enhance index.html with navigation and content
Added navigation menu, footer, and content structure to the HTML page.

--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -3,6 +3,65 @@
     <title>USC Basketball - Page2 with Basic Site Css</title>
     <script></script>
   </head>
-  <body></body>
-  <footer></footer>
+  <body>
+    <div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="../../index.html">Home</a>
+            <a href="../../242index.html">242 Home</a>
+            <a href="../../about.html">AboutMe</a>
+            <a href="../../interests.html">MyInterests</a>
+            <a href="../../usc.html">USC</a>
+            <a href="../../portfoliopage.html">Portfolio</a>
+            <a href="../../vitae.html">Vitae</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+<div class="container">    
+<div align="center"><h1>Assignment1 - Spring 26</h1></div>
+<div align="center">John S. Stritzinger</div>
+<div align="center">University of South Carolina</div>
+<div align="center">Computer Science 242 - Web Applications</div>
+<HR>
+<div align="center">
+<div class="row">
+<div class="column1" style="background-color: pink;">
+<ul>
+    <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
+    <li><a href="index.html">CSCE242 - Assignment One</a></li>
+    <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
+    <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
+</ul>
+</div>
+<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/image1.png" width="290px" height="290px"><img src="./images/john2.jpg" width="290px" height="290px"></span></div></div>
+<div class="column1" style="background-color: lightblue;">
+  <div class="tablecontainer">
+    <span style="align: left;"><H3>SiteMap</H3></span><HR>
+    <table>
+    <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+    <tr><td>About</td><td><a href="https://jssg33.github.io/usc242/about.html">About</a></td><td>01/15/2026</td></tr>
+    <tr><td>Interests</td><td><a href="https://jssg33.github.io/usc242/interests.html">Interests</a></td><td>01/15/2026</td></tr>
+    <tr><td>USCLife</td><td><a href="https://jssg33.github.io/usc242/usc.html">USC Life</a></td><td>01/15/2026</td></tr>
+    <tr><td>Portfolio</td><td><a href="https://jssg33.github.io/usc242/portfoliopage.html">ClassWork</a></td><td>01/15/2026</td></tr>
+    <tr><td>Vitae</td><td><a href="https://jssg33.github.io/usc242/vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
+    </table>
+    </div>
+</div>
+</div>
+</div>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWelcome to John S. Stritzinger's University of South Carolina Engineering Site. This site includes a collection of local works, and others which I have published previously. I am a Graduate Student in Computer Science and a Teaching Assistant. I am also the owner of two small companies which are various stages of formation.</p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe demands of small businesses on the Internet are substantial and I operate more than 5 twitter sites including a personal one, three full public websites with marketing collateral, a facebook site, and more than 10 published application frameworks for mobile tools, and console apps. I host services around the world in more than 10 states, and 5 countries using my own Hybrid Infrastructure along with Hybrid sites at Google, AWS, and Microsoft Azure.</p>
+<HR>
+<BR><BR><BR>
+</div>
+</body>
+<footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
 </html>
+
+ 
