Add CSS styles to index.html for layout and design
Added CSS styles for table, list, and layout elements.

--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -1,8 +1,90 @@
 <html>
   <head>
     <title>USC Basketball - Page2 with Basic Site Css</title>
-    <script></script>
-  </head>
+<!--John S. Stritzinger
+    CSCE242
+    Spring 2026
+    January 15th, 2026
+-->
+<style>
+.tablecontainer
+{
+color: white;
+background-color: lightblue;
+text-align: center;
+margin: 0 auto;
+}
+table
+{
+text-align: center;
+font-size: 11pt;
+color: white;
+background-color: lightblue;
+margin: 0 auto;
+}
+tr
+{
+width: 85%;
+height: 25px;
+text-align: center;
+margin: 0 auto;
+}
+td
+{
+width:125px;
+height: 25px;
+}
+th
+{
+width: 125px;
+height: 25px;
+}
+ul
+{
+background-color: pink;
+color: white;
+display: block;
+list-style-type: disc; /* Default bullet */
+margin-block-start: 1em;
+margin-block-end: 1em;
+margin-inline-start: 0px;
+margin-inline-end: 0px;
+padding-inline-start: 40px; /* Key: Left padding for indent */    
+}
+li 
+{
+  align: left;
+  display: list-item;
+  text-align: -webkit-match-parent;
+  margin-left: -20px;
+}
+.column
+{
+width: 50%;
+height: 350px;
+text-align: center;
+margin: 0 auto;
+border: 2px black solid;
+}    
+.column1
+{
+width: 25%;
+height: 350px;
+text-align: center;
+margin: 0 auto;  
+}
+.column1 ul 
+{ 
+text-align: left; 
+}
+p
+{
+margin-bottom: 5px;
+line-height: calc(1em + 6px);  
+margin-left: 30px;
+}
+</style>
+     </head>
   <body>
     <div class="topnav">
     <div class="dropdown">
