--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -4,8 +4,9 @@
 <!--John S. Stritzinger
     CSCE242
     Spring 2026
-    January 15th, 2026
+    January 21st, 2026
 -->
+<link rel="stylesheet" href="site.css"> 
 <style>
 .tablecontainer
 {
@@ -106,7 +107,7 @@ margin-left: 30px;
     </div>
 </div>
 <div class="container">    
-<div align="center"><h1>Assignment1 - Spring 26</h1></div>
+<div align="center"><h1>University of South Carolina Basketball</h1></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
@@ -116,12 +117,15 @@ margin-left: 30px;
 <div class="column1" style="background-color: pink;">
 <ul>
     <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
-    <li><a href="index.html">CSCE242 - Assignment One</a></li>
+    <li><a href="../242index.html">CSCE242 - Assignment One</a></li>
+    <li><a href="index.html">CSCE242 - Assignment Two</a></li>
+    <li><a href="https://www.sc.edu" target="_blank">USC Home Page</a></li>
+    <li><a href="https://www.sc.edu" target="_blank">USC Athletics Home Page</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
-<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/image1.png" width="290px" height="290px"><img src="./images/john2.jpg" width="290px" height="290px"></span></div></div>
+<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/usc1.png" width="290px" height="290px"><img src="./images/usc2.jpg" width="290px" height="290px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
