--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -107,10 +107,7 @@ margin-left: 30px;
     </div>
 </div>
 <div class="container">    
-<div align="center"><h1>University of South Carolina Basketball</h1></div>
-<div align="center">John S. Stritzinger</div>
-<div align="center">University of South Carolina</div>
-<div align="center">Computer Science 242 - Web Applications</div>
+<div align="center"><h1>University of South Carolina Men's Basketball</h1></div>
 <HR>
 <div align="center">
 <div class="row">
@@ -125,7 +122,7 @@ margin-left: 30px;
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
-<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/usc1.png" width="290px" height="290px"><img src="./images/usc2.jpg" width="290px" height="290px"></span></div></div>
+<div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/usc1.png" width="290px" height="290px"><img src="./images/usc2.jpg" width="290px" height="290px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
