--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -53,6 +53,7 @@ margin-block-end: 1em;
 margin-inline-start: 0px;
 margin-inline-end: 0px;
 padding-inline-start: 40px; /* Key: Left padding for indent */    
+margin-left: 20px;
 }
 li 
 {
@@ -120,7 +121,8 @@ margin-right: 30px;
 <div class="row">
 <div class="column1" style="background-color: pink;">
 <ul>
-    <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
+    <span align="center" style="align: left;"><H3>Quick Links</H3></span>
+    <span><HR></span>
     <li><a href="index.html">CSCE242 - Assignment One</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
