Fix link path for CSCE242 Assignment One

--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -115,7 +115,7 @@ margin-right: 30px;
 <div class="column1" style="background-color: pink;">
 <ul>
     <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
-    <li><a href="../242index.html">CSCE242 - Assignment One</a></li>
+    <li><a href="../../242index.html">CSCE242 - Assignment One</a></li>
     <li><a href="index.html">CSCE242 - Assignment Two</a></li>
     <li><a href="https://www.sc.edu" target="_blank">USC Home Page</a></li>
     <li><a href="https://sc.edu/athletics/" target="_blank">USC Athletics Home Page</a></li>
