Add About South Carolina Mens Basketball section
Added an 'About South Carolina Mens Basketball' section with details about the team and its recent performance.

--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -123,7 +123,7 @@ margin-right: 30px;
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
-<div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/usc1.jpg" width="290px" height="290px"><img src="./images/usc2.jpg" width="290px" height="290px"></span></div></div>
+<div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/usc1.jpg" width="290px" height="290px"><img src="./images/usc3.jpg" width="290px" height="290px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
@@ -139,6 +139,7 @@ margin-right: 30px;
 </div>
 </div>
 </div>
+<H3>About South Carolina Mens Basketball</H3>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSouth Carolina Mens Basketball is a Division I competitive basketball team which plays in the Southeastern Conference, one of three most prestigious conferences along with the BigTen, and the ACC which are historic basketball powers.</p>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe Mens team has a 2025-2026 record of 11-8 with a recent victory over Southeastern Conference rival Oklahoma at Home in a stadium which hangs the NCAA National Championship Banners of its very popular sister team the Womens Basketball team. </p>
 <HR>
