Add styles for H3 and visited links

--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -85,6 +85,14 @@ line-height: calc(1em + 6px);
 margin-left: 30px;
 margin-right: 30px;
 }
+H3
+{
+margin-left: 30px;
+}
+
+a:visited {
+    color: black; 
+}
 </style>
      </head>
   <body>
