Refactor Quick Links section in index.html

--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -119,9 +119,8 @@ margin-right: 30px;
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: pink;">
-<ul>
-    <span align="center" style="align: left;"><H3>Quick Links</H3></span>
-    <span><HR></span>
+  <span align="center" style="align: left;"><H3>Quick Links</H3></span><HR>
+  <ul>
     <li><a href="index.html">CSCE242 - Assignment One</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
