Update styles and add Assignment Two link
Added margin and line-height styles to paragraphs and included a new link for Assignment Two.

--- a/242index.html
+++ b/242index.html
@@ -83,7 +83,9 @@ text-align: left;
 p
 {
 margin-bottom: 5px;
-line-height: calc(1em + 6px);  
+line-height: calc(1em + 6px);
+margin-left: 30px;
+margin-right: 30px;
 }
 </style>
 </head>
@@ -120,6 +122,7 @@ line-height: calc(1em + 6px);
 <ul>
     <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
+    <li><a href="./assignments/02-basic-cs/index.html">CSCE242 - Assignment Two</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
