Add styles for visited and unvisited links

--- a/242index.html
+++ b/242index.html
@@ -87,6 +87,15 @@ line-height: calc(1em + 6px);
 margin-left: 30px;
 margin-right: 30px;
 }
+a:visited 
+{
+    color: black; 
+}
+
+a
+{
+   color: black; 
+}
 </style>
 </head>
 <body>
