--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@ p
 margin-bottom: 5px;
 line-height: calc(1em + 2px);  
 }
+a:visited {
+    color: black; 
+}
+
+a
+{
+   color: black; 
+}
 </style>
 </head>
 <body>
