--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -126,8 +126,8 @@ a
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: pink;">
-<ul>
-    <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
+  <span align="center" style="align: left;"><H3>Quick Links</H3></span><HR>
+  <ul>
     <li><a href="../../242index.html">CSCE242 - Assignment One</a></li>
     <li><a href="index.html">CSCE242 - Assignment Two</a></li>
     <li><a href="https://www.sc.edu" target="_blank">USC Home Page</a></li>
