--- a/242index.html
+++ b/242index.html
@@ -128,8 +128,8 @@ a
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: pink;">
-<ul>
-    <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
+    <span align="center" style="align: left;"><H3>Quick Links</H3></span><HR>
+    <ul>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
     <li><a href="./assignments/02-basic-cs/index.html">CSCE242 - Assignment Two</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
