Update image source and add new assignment link

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -56,7 +56,8 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<span align="center"><img src="john2.png" width="300px" height="300px"/></span>
+<div class="row">
+    <span align="center"><img src="./images/john2.jpg" width="33%" height="300px"/></span>
  
 
 <div class="row">
@@ -73,6 +74,7 @@
     <h2>App Sites</h2>
         <ul>
         <li><a href="./assignments/01-basic-html/index.html">Assignment1</a></li>
+        <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-cs/index.html">Assignment2</a></li>
     </ul>
   </div>
 <div class="column1" style="background-color: pink; border: 2px black solid;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
