--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -57,8 +57,8 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div class="row">
-    <span align="center"><img src="./images/john2.jpg" width="33%" height="300px"/></span>
- 
+    <span align="center"><img src="./images/p.png" width="33%" height="300px"/><img src="./images/p2.png" width="33%" height="300px"/><img src="./images/p3.png" width="33%" height="300px"/></span>
+</div>
 
 <div class="row">
   <div class="column1" style="background-color:lightblue; border: 2pt solid black">
