Fix anchor tags in social links section
Updated links in the social links section to properly close anchor tags.

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -57,17 +57,17 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div class="row">
-    <span align="center"><img src="./images/p.png" width="300px" height="300px"/><img src="./images/p2.png" width="300px" height="300px"/><img src="./images/p3.png" width="300px" height="300px"/></span>
+    <div align="center"><span align="center"><img src="./images/p.png" width="300px" height="300px"/><img src="./images/p2.png" width="300px" height="300px"/><img src="./images/p3.png" width="300px" height="300px"/></span></div>
 </div>
 
 <div class="row">
   <div class="column1" style="background-color:lightblue; border: 2px solid black;">
     <h2>My Webmaster Social Links</h2>
        <ul>
-        <li><a href="https://www.greenvilleassociates.com">G/A HomePage</li>
-        <li><a href="https://www.glocation.info">GLI HomePage</li>
-        <li><a href="https://www.twitter.com/greenvilleassoc">Twitter</li>
-        <li><a href="https://facebook.com/greenvilleassociates">@Greenville at Facebook</li>
+        <li><a href="https://www.greenvilleassociates.com">G/A HomePage</a></li>
+        <li><a href="https://www.glocation.info">GLI HomePage</a></li>
+        <li><a href="https://www.twitter.com/greenvilleassoc">Twitter</a></li>
+        <li><a href="https://facebook.com/greenvilleassociates">@Greenville at Facebook</a></li>
     </ul>
   </div>
   <div class="column1" style="background-color:lightgreen; border: 2pt solid black">
