--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -57,7 +57,7 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div class="row">
-    <div align="center"><span align="center"><img src="./images/p.png" width="300px" height="300px"/><img src="./images/p2.png" width="300px" height="300px"/><img src="./images/p3.png" width="300px" height="300px"/></span></div>
+    <div align="center"><span align="center" style="text-align: center; vertical-align: middle;"><img src="./images/p.png" width="300px" height="300px"/><img src="./images/p2.png" width="300px" height="300px"/><img src="./images/p3.png" width="300px" height="300px"/></span></div>
 </div>
 
 <div class="row">
