Add font-family to body and paragraph styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ text-align: left;
 p
 {
 margin-bottom: 5px;
-line-height: calc(1em + 2px);  
+line-height: calc(1em + 2px); 
+font-family: "Calibri", sans-serif;  
 }
 a:visited {
     color: black; 
@@ -81,7 +82,7 @@ a
 }
 </style>
 </head>
-<body>
+<body style="font-family: Calibri, sans-serif;">
 
 <div class="topnav">
     <div class="dropdown">
