--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a
 }
 </style>
 </head>
-<body style="font-family: Calibri, sans-serif;">
+<body>
 
 <div class="topnav">
     <div class="dropdown">
