--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ a
   <H2 id="headerclassoverview">Class Overview</H2>
   <p id="classdescription">This is a Web Development class focused on HTML, CSS, Javascript and React Programming Class at the University of South Carolina with both UI, and BackOffice Tools covered in detail. This course is the second in the sequence following Computer Science 102(CSS/Javascript).</p>
   <H3 id="githublinks">Github Repo</H3>
-  <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
-  <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
+  <li><a href="https://github.com/jssg33/usc242/" style="text-decoration:none;">Github Repository Access</a></li>
+  <li><a href="https://jssg33.github.io/usc242/index.html" style="text-decoration:none;">Github IO Main Page</a></li>
   <H2 id="classassignments">Assignments</H2>
-  <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One(1/18) - 242 Home Page with Site Css</a></li>
-  <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two(1/21) - USC Basketball w Basic CSS</li>
+  <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html" style="text-decoration:none;">Assignment One(1/18) - 242 Home Page with Site Css</a></li>
+  <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html" style="text-decoration:none;">Assignment Two(1/21) - USC Basketball w Basic CSS</li>
 </ul>
 <BR><BR><BR>
 </div>
