--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -152,7 +152,7 @@ a
 </div>
 </div>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWelcome to John S. Stritzinger's University of South Carolina Engineering Site. This site includes a collection of local works, and others which I have published previously. I am a Graduate Student in Computer Science and a Teaching Assistant. I am also the owner of two small companies which are various stages of formation.</p>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe demands of small businesses on the Internet are substantial and I operate more than 5 twitter sites including a personal one, three full public websites with marketing collateral, a facebook site, and more than 10 published application frameworks for mobile tools, and console apps. I host services around the world in more than 10 states, and 5 countries using my own Hybrid Infrastructure along with Hybrid sites at Google, AWS, and Microsoft Azure.</p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe demands of small businesses on the Internet are substantial and I operate more than five(5) twitter sites including a personal one, three full public websites with marketing collateral, a facebook site, and more than ten(10) published application frameworks for mobile tools, and console apps. I host services around the world in more than ten(10) states, and five(5) countries using my own Hybrid Infrastructure along with Hybrid sites at Google, AWS, and Microsoft Azure.</p>
 <HR>
 <BR><BR><BR>
 </div>
