--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -122,6 +122,7 @@ a
 </div>
 <div class="container">    
 <div align="center"><h1>University of South Carolina Men's Basketball</h1></div>
+<div align="center"><h2>2024 Calendar Year</h2></div>
 <HR>
 <div align="center">
 <div class="row">
@@ -130,8 +131,8 @@ a
   <ul>
     <li><a href="../../242index.html">CSCE242 - Assignment One</a></li>
     <li><a href="index.html">CSCE242 - Assignment Two</a></li>
-    <li><a href="https://www.sc.edu" target="_blank">USC Home Page</a></li>
-    <li><a href="https://sc.edu/athletics/" target="_blank">USC Athletics Home Page</a></li>
+    <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
+    <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics Home Page</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
