--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -127,14 +127,14 @@ a
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: pink;">
-  <span align="center" style="align: left;"><H3>Quick Links</H3></span><HR>
+  <span align="center" style="align: left;"><H3>Sports Quick Links</H3></span><HR>
   <ul>
-    <li><a href="../../242index.html">CSCE242 - Assignment One</a></li>
-    <li><a href="index.html">CSCE242 - Assignment Two</a></li>
     <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
     <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics Home Page</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
-    <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
+    <li><a href="https://www.bbc.com" target="_blank">BBC</a></li> 
+    <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
+    <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
 </ul>
 </div>
 <div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/usc1.jpg" width="290px" height="290px"><img src="./images/usc4.png" width="290px" height="290px"></span></div></div>
