--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -122,7 +122,7 @@ a
 </div>
 <div class="container">    
 <div align="center"><h1>University of South Carolina Men's Basketball</h1></div>
-<div align="center"><h2>2024 Calendar Year</h2></div>
+<div align="center"><h2>2025-2026 Calendar Year</h2></div>
 <HR>
 <div align="center">
 <div class="row">
@@ -135,6 +135,7 @@ a
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li> 
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
     <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+    <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
 </ul>
 </div>
 <div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/usc1.jpg" width="290px" height="290px"><img src="./images/usc4.png" width="290px" height="290px"></span></div></div>
@@ -155,7 +156,7 @@ a
 </div>
 <H3>About South Carolina Mens Basketball</H3>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSouth Carolina Mens Basketball is a Division I competitive basketball team which plays in the Southeastern Conference, one of three most prestigious conferences along with the BigTen, and the ACC which are historic basketball powers.</p>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe Mens team has a 2025-2026 record of 11-8 with a recent victory over Southeastern Conference rival Oklahoma at Home in a stadium which hangs the NCAA National Championship Banners of its very popular sister team the Womens Basketball team. </p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe Mens team has a 2025-2026 record of 11-8 with a recent victory over Southeastern Conference rival Oklahoma at Home in a stadium which hangs the NCAA National Championship Banners of its very popular sister team the Womens Basketball team. The team is seeking to return to the NCAA March Madness festivities in the near future. </p>
 <HR>
 <BR><BR><BR>
 </div>
