--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -155,7 +155,7 @@ a
 </div>
 </div>
 <H3>About South Carolina Mens Basketball</H3>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSouth Carolina Mens Basketball is a Division I competitive basketball team which plays in the Southeastern Conference, one of three most prestigious conferences along with the BigTen, and the ACC which are historic basketball powers.</p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSouth Carolina Mens Basketball is a Division I competitive basketball team which plays in the Southeastern Conference, one of three most prestigious conferences along with the BigTen, and the ACC which are historic basketball powers. South Carolina is lead by Senior Guard Meechie Johnson(#5) who is their leading scorer for this year.</p>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe Mens team has a 2025-2026 record of 11-8 with a recent victory over Southeastern Conference rival Oklahoma at Home in a stadium which hangs the NCAA National Championship Banners of its very popular sister team the Womens Basketball team. The team is seeking to return to the NCAA March Madness festivities in the near future. </p>
 <HR>
 <BR><BR><BR>
