--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -115,8 +115,8 @@ a
     </div>
 
     <div class="right-links">
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
+        <a href="../../login.html">Login</a>
+        <a href="../../logout.html">Logout</a>
     </div>
 </div>
 <div class="container">    
