--- a/assignments/01-basic-html/index.html
+++ b/assignments/01-basic-html/index.html
@@ -135,7 +135,7 @@ a
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
-<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/image1.png" width="290px" height="290px"><img src="./images/john2.jpg" width="290px" height="290px"></span></div></div>
+<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/image1.png" width="48%" height="330px"><img src="./images/john2.jpg" width="48%" height="330px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
