--- a/login.html
+++ b/login.html
@@ -30,4 +30,5 @@
 
 Coming Soon a Really Cool Login Page with Page Level Locking.  
 </body>
+<footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
 </html>
