--- a/242index.html
+++ b/242index.html
@@ -136,7 +136,7 @@ a
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
-<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"><img src="john2.jpg" width="290px" height="290px"></span></div></div>
+<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="46%" height="330px"><img src="john2.jpg" width="46%" height="330px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
