--- a/vitae.html
+++ b/vitae.html
@@ -30,7 +30,15 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div align="center"><span><img src="image6.png" width="400px" height="400px"><img src="image7.png" width="400px" height="400px"></span></div>
+<HR>
+<div id="hist_work"><H5></H5></div>
+<div id="hist_education"><H5></H5></div>
+<div id="hist_appsuites"><H5></H5></div>    
+<div id="hist_coding"><H5></H5></div>
+<div id="hist_sql"><H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB, PervasiveSQL</H5></div> 
+<div id="hist_projects"><H5></H5></div>        
+<HR>
+<BR><BR><BR>
 </div>
 </body>
 <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
