--- a/vitae.html
+++ b/vitae.html
@@ -35,7 +35,10 @@
 <div id="hist_education"><H5></H5></div>
 <div id="hist_appsuites"><H5></H5></div>    
 <div id="hist_coding"><H5></H5></div>
-<div id="hist_sql"><H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB, PervasiveSQL</H5></div> 
+<div id="hist_sql">
+    <H4>Database Platforms</H5>
+    <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB, PervasiveSQL</H5>
+</div> 
 <div id="hist_projects"><H5></H5></div>        
 <HR>
 <BR><BR><BR>
