--- a/vitae.html
+++ b/vitae.html
@@ -25,7 +25,7 @@
     </div>
 </div>
 <div class="container">    
-<div align="center"><H1>Vitae</H1></div>
+<div align="center"><H1>Selected Vitae</H1></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
