--- a/vitae.html
+++ b/vitae.html
@@ -36,6 +36,8 @@
 <div id="hist_appsuites"><H5></H5></div>    
 <div id="hist_coding"><H5></H5></div>
 <div id="hist_sql">
+    <H4>Programming Languages</H5>
+    <H5>Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS, IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus ScriptingLang, NodeJS</H5>
     <H4>Database Platforms</H5>
     <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB, PervasiveSQL</H5>
 </div> 
