--- a/vitae.html
+++ b/vitae.html
@@ -3,7 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css">    
-<head><title>Vitae</title></head>
+<head><title>Vitae</title>
+<style>
+#hist_work{margin-left: 30px;}
+#hist_education{margin-left: 30px;}
+#hist_appsuites{margin-left: 30px;}
+#hist_coding{margin-left: 30px;}
+#hist_sql{margin-left: 30px;}
+</style>
+</head>
 <body>
 <div class="topnav">
     <div class="dropdown">
@@ -34,10 +42,11 @@
 <div id="hist_work"><H5></H5></div>
 <div id="hist_education"><H5></H5></div>
 <div id="hist_appsuites"><H5></H5></div>    
-<div id="hist_coding"><H5></H5></div>
-<div id="hist_sql">
+<div id="hist_coding">
     <H4>Programming Languages</H5>
     <H5>Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS, IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus ScriptingLang, NodeJS</H5>
+</div>
+<div id="hist_sql">
     <H4>Database Platforms</H5>
     <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB, PervasiveSQL</H5>
 </div> 
