--- a/vitae.html
+++ b/vitae.html
@@ -44,7 +44,7 @@
 <div id="hist_appsuites"><H5></H5></div>    
 <div id="hist_coding">
     <H4>Programming Languages</H5>
-    <H5>Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS, IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus ScriptingLang, NodeJS</H5>
+    <H5>Lisp, Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS, IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus ScriptingLang, NodeJS, Shell Scripting, Haskell</H5>
 </div>
 <div id="hist_sql">
     <H4>Database Platforms</H5>
