--- a/vitae.html
+++ b/vitae.html
@@ -41,10 +41,10 @@
 <HR>
 <div id="hist_work"><H5></H5></div>
 <div id="hist_education"><H5></H5></div>
-<div id="hist_appsuites"><H5></H5></div>    
+<div id="hist_appsuites"><H4>ERP Tools</H4><H5>Microsoft Dynamics SL, Oracle Financials, Oracle/Peoplesoft HR, Aloha, Micros, IntuitQuickBooks </H5></div>    
 <div id="hist_coding">
     <H4>Programming Languages</H5>
-    <H5>Lisp, Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS, IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus ScriptingLang, NodeJS, Shell Scripting, Haskell</H5>
+    <H5>Lisp, Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
 </div>
 <div id="hist_sql">
     <H4>Database Platforms</H5>
