--- a/vitae.html
+++ b/vitae.html
@@ -41,7 +41,11 @@
 <HR>
 <div id="hist_work"><H5></H5></div>
 <div id="hist_education"><H5></H5></div>
-<div id="hist_appsuites"><H4>ERP Tools</H4><H5>Microsoft Dynamics SL, Oracle Financials, Oracle/Peoplesoft HR, Aloha, Micros, IntuitQuickBooks </H5></div>    
+<div id="hist_appsuites">
+<H4>ERP Tools</H4><H5>Microsoft Dynamics SL, Oracle Financials, Oracle/Peoplesoft HR, IntuitQuickBooks, FusionShell Professional</H5> 
+<H4>Restaurant Systems</H4><H5>Aloha, Micros, POSI, KDS, FiveGuys POS, FusionCommerce</H5>
+
+</div>    
 <div id="hist_coding">
     <H4>Programming Languages</H5>
     <H5>Lisp, Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
