--- a/vitae.html
+++ b/vitae.html
@@ -43,7 +43,7 @@
 <div id="hist_education"><H5></H5></div>
 <div id="hist_appsuites">
 <H4>ERP Tools</H4><H5>Microsoft Dynamics SL, Oracle Financials, Oracle/Peoplesoft HR, IntuitQuickBooks, FusionShell Professional</H5> 
-<H4>Restaurant Systems</H4><H5>Aloha, Micros, POSI, KDS, FiveGuys POS, FusionCommerce</H5>
+<H4>Restaurant Systems</H4><H5>Aloha, Micros, POSI, KDS, FiveGuys POS, Panera POS, FusionCommerce</H5>
 
 </div>    
 <div id="hist_coding">
