--- a/vitae.html
+++ b/vitae.html
@@ -52,7 +52,7 @@
 </div>
 <div id="hist_sql">
     <H4>Database Platforms</H5>
-    <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB, PervasiveSQL</H5>
+    <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB/MongoDB, PervasiveSQL</H5>
 </div> 
 <div id="hist_projects"><H5></H5></div>        
 <HR>
