--- a/vitae.html
+++ b/vitae.html
@@ -40,19 +40,18 @@
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <HR>
 <div id="hist_work"><H5></H5></div>
-<div id="hist_education"><H5></H5></div>
+<div id="hist_education"><H4>University Programs</H4><H5>University of Delaware, University of Michigan, University of South Carolina, University of Pennsylvania - Wharton School</H5></div>
 <div id="hist_appsuites">
 <H4>ERP Tools</H4><H5>Microsoft Dynamics SL, Oracle Financials, Oracle/Peoplesoft HR, IntuitQuickBooks, FusionShell Professional</H5> 
 <H4>Restaurant Systems</H4><H5>Aloha, Micros, POSI, KDS, FiveGuys POS, Panera POS, FusionCommerce</H5>
-
 </div>    
 <div id="hist_coding">
-    <H4>Programming Languages</H5>
+    <H4>Programming Languages(17)</H5>
     <H5>Lisp, Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
 </div>
 <div id="hist_sql">
-    <H4>Database Platforms</H5>
-    <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, CosmosDB/MongoDB, PervasiveSQL</H5>
+    <H4>Database Platforms(7)</H5>
+    <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, AzCosmosDB/MongoDB, PervasiveSQL, MSAccess</H5>
 </div> 
 <div id="hist_projects"><H5></H5></div>        
 <HR>
