--- a/vitae.html
+++ b/vitae.html
@@ -43,7 +43,7 @@
 <div id="hist_education"><H4>University Programs(5)</H4><H5>University of Michigan, University of Delaware, University of South Carolina, University of Pennsylvania - Wharton School</H5></div>
 <div id="hist_appsuites">
 <H4>Network Management Tools(11)</H4><H5>Cisco Works, BMC Patrol, Kratos Networks, IBM Netcool, IBM Maximo, HPE Peregrine, HPE Openview, Ivanti LandeskManager, Microsoft SMS, Alcatel, Paradyne NMS, Greenville GEM</H5> 
-<H4>ERP Tools</H4><H5>Microsoft Dynamics SL, Oracle Financials, Oracle/Peoplesoft HR, IntuitQuickBooks, FusionShell Professional, Siebel Systems</H5> 
+<H4>ERP Tools(9)</H4><H5>Microsoft Dynamics SL, Oracle Financials, Oracle/Peoplesoft HR, IntuitQuickBooks, FusionShell Professional, Siebel Systems, SAP Financials, Solomon III, Peachtree</H5> 
 <H4>Restaurant Systems(7)</H4><H5>Aloha, Micros, POSI, KDS, FiveGuys POS, Panera POS, FusionCommerce</H5>
 </div>    
 <div id="hist_coding">
